--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@
 buildscript {
     ext {
         hilt_version = '2.38.1'
+        nav_version = '2.4.2'
     }
 
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
