Upgrade project to AGP 8.0.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 api_access_key=94ca5d8d2c29792cdf68b3f2e618418b
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
